--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Grupo Familiar</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
+    <link rel='stylesheet' href="node_modules\bootstrap\dist\css\bootstrap.min.css">
 </head>
 <body>
 
